kustomize/instances/overlays/frontend/sockshop/istio/sockshop-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: sockshop
