kustomize/instances/overlays/frontend/sockshop/istio/sockshop-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts
spec:
  hosts:
  - carts
  http:
  - route:
    - destination:
        host: carts
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts
spec:
  host: carts
  subsets:
  - name: v1
    labels:
      version: v1
      name: carts
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts-db
spec:
  hosts:
  - carts-db
  http:
  - route:
    - destination:
        host: carts-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts-db
spec:
  host: carts-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: carts-db
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
spec:
  hosts:
  - catalogue
  http:
  - route:
    - destination:
        host: catalogue
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue
spec:
  host: catalogue
  subsets:
  - name: v1
    labels:
      version: v1
      name: catalogue
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue-db
spec:
  hosts:
  - catalogue-db
  http:
  - route:
    - destination:
        host: catalogue-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue-db
spec:
  host: catalogue-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: catalogue-db
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sockshop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - route:
    - destination:
        host: front-end
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
spec:
  host: front-end
  subsets:
  - name: v1
    labels:
      version: v1
      name: front-end
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders
spec:
  hosts:
  - orders
  http:
  - route:
    - destination:
        host: catalogue-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders
spec:
  host: orders
  subsets:
  - name: v1
    labels:
      version: v1
      name: orders
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-db
spec:
  hosts:
  - orders-db
  http:
  - route:
    - destination:
        host: orders-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders-db
spec:
  host: orders-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: orders-db
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
spec:
  host: payment
  subsets:
  - name: v1
    labels:
      version: v1
      name: payment
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: queue-master
spec:
  hosts:
  - queue-master
  http:
  - route:
    - destination:
        host: queue-master
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: queue-master
spec:
  host: queue-master
  subsets:
  - name: v1
    labels:
      version: v1
      name: queue-master
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq
spec:
  hosts:
  - rabbitmq
  http:
  - route:
    - destination:
        host: rabbitmq
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq
spec:
  host: rabbitmq
  subsets:
  - name: v1
    labels:
      version: v1
      name: rabbitmq
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping
spec:
  hosts:
  - shipping
  http:
  - route:
    - destination:
        host: shipping
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping
spec:
  host: shipping
  subsets:
  - name: v1
    labels:
      version: v1
      name: shipping
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - user
  http:
  - route:
    - destination:
        host: user
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user
spec:
  host: user
  subsets:
  - name: v1
    labels:
      version: v1
      name: user
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-db
spec:
  hosts:
  - user-db
  http:
  - route:
    - destination:
        host: user-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-db
spec:
  host: user-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: user-db
